<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/create_albums"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/add_album"
        android:visible="false"
        app:showAsAction="ifRoom"/>

</menu>