<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/ic_baseline_album_24"
        android:title="@string/nav_title_albums" />

    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/nav_title_artists" />

    <item
        android:id="@+id/navigation_collectors"
        android:icon="@drawable/ic_baseline_face_24"
        android:title="@string/nav_title_collectors" />

</menu>