...
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_album_description"
                android:textSize="24sp"
                android:textStyle="bold" />
...
